[gd_scene load_steps=4 format=3 uid="uid://bnvx8kxtd8qg8"]

[ext_resource type="Script" path="res://boss.gd" id="1_3phu3"]
[ext_resource type="PackedScene" uid="uid://bx14nlhnferb7" path="res://3d_godot_robot.tscn" id="1_jvew7"]

[sub_resource type="SphereShape3D" id="SphereShape3D_6p3l8"]

[node name="Boss" type="CharacterBody3D"]
collision_layer = 8
collision_mask = 20
script = ExtResource("1_3phu3")

[node name="pivot" type="Node3D" parent="."]

[node name="3DGodotRobot" parent="pivot" instance=ExtResource("1_jvew7")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.176689, 1.31442, -0.433214)
light_color = Color(1, 0, 0, 1)
light_energy = 40.0
omni_attenuation = 1.07177

[node name="OmniLight3D2" type="OmniLight3D" parent="pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.186, 1.313, -0.433)
light_color = Color(1, 0, 0, 1)
light_energy = 40.0
omni_attenuation = 1.1487

[node name="SpotLight3D" type="SpotLight3D" parent="pivot"]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0.176689, 1.31442, -0.433214)
light_color = Color(1, 0, 0, 1)
light_energy = 40.0
light_indirect_energy = 5.0
spot_range = 40.0
spot_angle = 15.0

[node name="SpotLight3D2" type="SpotLight3D" parent="pivot"]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, -0.186, 1.313, -0.433)
light_color = Color(1, 0, 0, 1)
light_energy = 40.0
light_indirect_energy = 5.0
spot_range = 40.0
spot_angle = 15.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30493, 0)
shape = SubResource("SphereShape3D_6p3l8")

[node name="Dying" type="Timer" parent="."]
wait_time = 0.3

[connection signal="timeout" from="Dying" to="." method="_on_dying_timeout"]
